package pl.edu.agh.mobile.adhoccom;

message ChatMessage {
	required string body = 1;
	required string sender = 2;
	required int32 date = 3;
	required string group_name = 4;
	optional string group_chalenge = 5;
}